c4prj2_input/grade.txt
Grading at Thu Mar 11 10:04:59 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:42:32: error: request for member ‘value’ in something not a structure or union
       if (fc->decks[i].cards[j].value == '?'){
                                ^
Compilation of future.c failed

Overall Grade: F
